# pyro_stand

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build.sh  com_class.cpp  com_class.h  crc8.cpp  crc8.h  cycleparser.cpp  cycleparser.h  cyclogram.ini  cyclogram_data.h  cyclogram_full.ini  launcher.cpp  launcher.h  launcher.ui  main.cpp  main_demo.cpp  main_service.cpp  mainwindow.cpp  mainwindow.h  platform.h  precise_time.h  real_serial_port.h  serial_port.h  session_logger.cpp  session_logger.h  stand.cpp  stand.h  timeline_widget.cpp  timeline_widget.h  types.h
.claude/: context.md
.claude/commands/: build.md  demo.md  test.md
.claude/mentor/: 00_README.md  concepts.md  learning_path.md  production.md  session_01.md
.claude/tasks/: README.md
.github/workflows/: ci.yml
deploy/: README.md  pyro_stand.service
design/: FOR_DESIGNER.md  README.md  spec.md
design/mockups/: FROM_ARTYOM.md  ORCHESTRATOR_REPLY.md  STATUS.md  T18-DISCUSSION.md  T18-Progress-v1.html  T18-Timeline-v1.dc.html  T18-Timeline-v2.dc.html
docs/: EDGE_CASES.md  TECHNICAL.md  РУКОВОДСТВО_ОПЕРАТОРА.md
mocks/: mock_serial.h
project/: Сценарий - путь оператора.html
project/design/mockups/: DESIGN-DOC.md  FullScreen-v1.dc.html  README.md  Scenario-v1.dc.html  T18-Timeline-v3.dc.html  T19-ControlPanel-v1.dc.html  T20-LogPanel-v1.dc.html
project/uploads/: FOR_DESIGNER.md
tests/: mock_serial.h  tst_analysis.cpp  tst_cyclogram.cpp  tst_gui.cpp  tst_logformat.cpp  tst_reading.cpp
